Fix #3788: Self-intersecting track designs cannot be placed (#25894)
When placing a track design that loops back on itself, earlier placed pieces would block later pieces during clearance checks.

This commit adds an optional RideId parameter to MapCanConstructWithClearAt to skip track elements belonging to the same ride during track design placement.

--- a/distribution/changelog.txt
+++ b/distribution/changelog.txt
@@ -5,6 +5,7 @@
 - Improved: [#25765] The ‘View options’ and ‘Special track elements’ dropdowns no longer need click-and-hold.
 - Improved: [#25858] macOS now supports the onboarding menu.
 - Change: [#25018] Add upkeep cost to booster pieces.
+- Fix: [#3788] Self-intersecting track designs cannot be placed.
 - Fix: [#4643, #25167] Many metal supports draw with a filled in top when they didn't in vanilla, causing some slight misalignment and glitching.
 - Fix: [#15009] Landscaping tools do not display estimates when the game is paused (original bug).
 - Fix: [#18441] Replacing footpaths sometimes results in a spurious “Footpath in the way” error (original bug).
