Add missing changelog entries, fix up a few
[ci skip]

--- a/distribution/changelog.txt
+++ b/distribution/changelog.txt
@@ -1,14 +1,14 @@
 0.4.31 (in development)
 ------------------------------------------------------------------------
 - Feature: [#25844] The sprite builder now also supports adding JSON-based palettes.
+- Improved: [#3788] Self-intersecting track designs can now be placed.
 - Improved: [#25719] The weather change dropdown now shows icons next to the weather types for easier selection.
 - Improved: [#25765] The ‘View options’ and ‘Special track elements’ dropdowns no longer need click-and-hold.
 - Improved: [#25858] macOS now supports the onboarding menu.
 - Improved: [#25882] Maze construction now auto-removes trees.
 - Improved: [objects#421] The vehicle tab of some rides now shows more of the vehicle.
 - Change: [#25018] Add upkeep cost to booster pieces.
-- Fix: [#3788] Self-intersecting track designs cannot be placed.
-- Fix: [#4643, #25167] Many metal supports draw with a filled in top when they didn't in vanilla, causing some slight misalignment and glitching.
+- Fix: [#4643, #25167] Many metal supports draw with a filled in top when they didn’t in vanilla, causing some slight misalignment and glitching.
 - Fix: [#15009] Landscaping tools do not display estimates when the game is paused (original bug).
 - Fix: [#18441] Replacing footpaths sometimes results in a spurious “Footpath in the way” error (original bug).
 - Fix: [#20620] In-game console caret does not update when pasting.
@@ -17,11 +17,12 @@
 - Fix: [#25745] Crash when a player connection is aborted early.
 - Fix: [#25775] Network download sizes are in bytes instead of the listed kibibytes.
 - Fix: [#25799] The animated options tab icon of the news window does not always redraw.
-- Fix: [#25850] Guests do not have their happiness penalised by low energy, low hunger, low thirst, high toilet.
+- Fix: [#25850] Guests do not have their happiness penalised by low energy, high hunger, high thirst, high toilet.
 - Fix: [#25850] Ride nausea generation is different compared to vanilla.
 - Fix: [#25854] When a guest is at 0 happiness or energy, the game draws too big of a bar in the guest stats window.
 - Fix: [#25862] Diagonal and inclined brakes are not counted when calculating upkeep cost.
-- Fix: [#25873] Repainting a banner in OpenRCT2-specific colours results in an error message. 
+- Fix: [#25873] Repainting a banner in OpenRCT2-specific colours results in an error message.
+- Fix: [#25879] Guest window viewport doesn’t follow vehicle when on they board a ride. 
 - Fix: [objects#419] Alignment of RCT2 red, yellow and green queue previews is off.
 - Fix: [objects#424] Jet Aeroplane decor has a hole in it.
 - Fix: [objects#425] Capacity of ‘Blob from outer space ride’ is incorrectly listed.
@@ -37,7 +38,7 @@
 - Improved: [#25625] Renewing and refurbishing rides now also resets the downtime.
 - Improved: [#25662] The sprite build command is faster when building sprites from the same image file.
 - Change: [#21912] Toilet income is now categorised as shop sales instead of ride tickets.
-- Change: [#25403] Guests will not slide down the Spiral Slide if it's broken, even if they have already entered the ride structure.
+- Change: [#25403] Guests will not slide down the Spiral Slide if it’s broken, even if they have already entered the ride structure.
 - Change: [#25485] Make the enlarged pressed swatch sprite more pronounced.
 - Change: [#25544] The default game window size is now 1280×720px instead of 640×480px.
 - Fix: [#9895] Stand-up coaster gets wrong intensity boost from the synchronisation bonus.
@@ -143,7 +144,7 @@
 - Change: [#25266] Lightning and thunder have less chance of occurring during blizzards.
 - Removed: [#25225] `sprite exportalldat`, replaced with `sprite exportobject`.
 - Fix: [#24513] Ride/track designs can now be shifted underground as well.
-- Fix: [#24682] The scenery window isn't high enough to accommodate all tool buttons when there are multiple rows of groups/tabs.
+- Fix: [#24682] The scenery window isn’t high enough to accommodate all tool buttons when there are multiple rows of groups/tabs.
 - Fix: [#24882] Guests are shown with hats and umbrellas whilst clapping.
 - Fix: [#24998] Some custom small scenery objects do not load.
 - Fix: [#25131] The Reverse Freefall Coaster On-ride photo section track has incorrectly coloured ties.
@@ -309,7 +310,7 @@
 - Fix: [#24464] Window and viewport visibility is not calculated correctly causing minor performance issues.
 - Fix: [#24488] Objects are not always redrawn immediately when they are reloaded from the Object Selection window.
 - Fix: [#24544] RCT1 Maze designs with wooden walls are not imported correctly.
-- Fix: [#24567] Long flat-to-steep wooden mine support sprites don't connect to flat supports exactly.
+- Fix: [#24567] Long flat-to-steep wooden mine support sprites don’t connect to flat supports exactly.
 
 0.4.22 (2025-05-04)
 ------------------------------------------------------------------------
@@ -359,7 +360,7 @@
 - Change: [#24059] The ‘select other ride’ button is now available in the track designs manager.
 - Change: [#24067] [Plugin] Registered menu items are now listed alphabetically.
 - Change: [#24070] Footpath selection menus now show object names on hover using a tooltip.
-- Change: [#24101] Frozen peeps are no longer removed when using the 'remove all guests' cheat.
+- Change: [#24101] Frozen peeps are no longer removed when using the “remove all guests” cheat.
 - Fix: [#4225] Ride Construction window offers non-existent banked sloped to level curve (original bug).
 - Fix: [#5281] Missing supports on miniature railways built backwards.
 - Fix: [#7222] Transparent pixels in sloped path tunnels (original bug).
