--- a/distribution/changelog.txt
+++ b/distribution/changelog.txt
@@ -1,3 +1,6 @@
+0.4.32 (in development)
+------------------------------------------------------------------------
+
 0.4.31 (2026-02-01)
 ------------------------------------------------------------------------
 - Feature: [#25844] The sprite builder now also supports adding JSON-based palettes.
